# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warpcv"
version = "0.1.0"
authors = [
    {name = "Rezky M. K.", email = "rezkykam34@gmail.com"}
]
description = "WarpCV computer vision library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
    "loguru>=0.7.3",
    "cupy-cuda13x>=13.6.0"
]
 
 